examples/gke/tei-from-gcs-deployment/gpu-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tei-deployment
  namespace: hf-gke-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tei-server
  template:
    metadata:
      labels:
        app: tei-server
        hf.co/model: BAAI--bge-base-en-v1
        hf.co/task: text-embeddings
      annotations:
        deployment.kubernetes.io/max-replicas: "1"
    spec:
      serviceAccountName: hf-gke-service-account
      containers:
        - name: tei-container
          image: us-docker.pkg.dev/deeplearning-platform-release/gcr.io/huggingface-text-embeddings-inference-cu122.1-2.ubuntu2204:latest
          resources:
            requests:
              nvidia.com/gpu: 1
            limits:
              nvidia.com/gpu: 1
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /data
              name: gcs-mount
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: gcs-mount
          ephemeral:
            volumeClaimTemplate:
              spec:
                accessModes: [ "ReadWriteOnce" ]
                storageClassName: ssd
                resources:
                  requests:
                    storage: 48Gi
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-tesla-t4
