examples/gke/tei-from-gcs-deployment/gpu-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tei-service
  namespace: hf-gke-namespace
spec:
  selector:
    app: tei-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
