examples/gke/tei-from-gcs-deployment/gpu-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tei-ingress
  namespace: hf-gke-namespace
spec:
  ingressClassName: "gce"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tei-service
                port:
                  number: 8080
